# cypherantic

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bootstrap  compose.yml  example.py  pyproject.toml
.github/workflows/: test.yml
src/cypherantic/: __init__.py
tests/: helpers.py  test_nodes.py  test_relationships.py
