[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.28.0"]

[project]
authors = [{ name = "Dave Shawley", email = "daves@aweber.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Pydantic",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "logging>=0.4.9.6",
  "neo4j~=6.0",
  "pydantic~=2.12",
  "typing>=3.10.0.0",
]
description = "Pydantic meet Cypher, Cypher meet Pydantic."
license = 'BSD-3-Clause'
name = "cypherantic"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"

[dependency-groups]
dev = [
  "coverage~=7.13",
  "dotenv>=0.9.9",
  "mkdocs>=1.6.1",
  "mkdocs-material~=9.7",
  "mkdocstrings-python>=2",
  "mypy~=1.19",
  "pre-commit~=4.5",
  "pyrefly>=0.45",
  "pytest~=9.0",
  "ruff>=0.14",
]
recommended = ["neo4j-rust-ext~=6.0.3.0"]

[tool.coverage.report]
# fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/cypherantic"]

[tool.coverage.xml]
output = "build/reports/coverage.xml"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
docstring-code-format = false
quote-style = "single"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ISC",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "TRY003", # Allow messages in exception initializers
  "UP047",  # Using TypeVars for generic models
]
flake8-quotes = { inline-quotes = "single" }
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"example.py" = ["S101", "T201"]
"tests/**/*.py" = ["S", "SLF001"]
